--- a/src/components/HeaderLanding.astro
+++ b/src/components/HeaderLanding.astro
@@ -24,6 +24,10 @@ const links = [
     text: "Tracks",
     link: "/#tracks",
   },
+  {
+    text: "Schedule",
+    link: "/schedule",
+  },
   // {
   //   text: "Sponsors",
   //   link: "/sponsors",
