--- a/src/pages/schedule-day-2.astro
+++ b/src/pages/schedule-day-2.astro
@@ -14,7 +14,7 @@ import Schedules from "components/Schedules.astro";
 >
   <HeroText title="Schedule: September 14" />
 
-  <Schedules currentDay="September 14" />
+  <Schedules currentDay="TBD date" />
 
   <GetTickets
     title="Grab your GOSIM Hangzhou ticket"
