--- a/src/pages/schedule.astro
+++ b/src/pages/schedule.astro
@@ -14,7 +14,7 @@ import Schedules from "components/Schedules.astro";
 >
   <HeroText title="Schedule: September 13" />
 
-  <Schedules currentDay="September 13" />
+  <Schedules currentDay="TBD date" />
 
   <GetTickets
     title="Grab your GOSIM Hangzhou ticket"
