--- a/src/pages/zh/schedule.astro
+++ b/src/pages/zh/schedule.astro
@@ -3,27 +3,27 @@
 import Layout from "layouts/LayoutLandingZh.astro";
 import GetTickets from "components/GetTickets.astro";
 import HeroText from "components/HeroText.astro";
-import Schedules from "components/Schedules.astro";
+import Schedules from "components/SchedulesZh.astro";
 ---
 
 <Layout
-  title="第一天日程 – GOSIM Hangzhou 2025"
-  description="GOSIM Hangzhou 2025是开源AI项目、开发者、研究人员和行业赞助商的聚会，旨在分享知识、相互学习和合作。"
+  title="议程安排 第一天 – GOSIM 杭州 2025"
+  description="GOSIM 杭州 2025 是开源AI项目、开发者、研究人员和行业赞助商的聚会，旨在分享知识、相互学习和协作。"
   navBackground="light"
-  pageTransitionName="日程"
+  pageTransitionName="Schedule"
 >
-  <HeroText title="日程：9月13日" />
+  <HeroText title="议程安排：9月13日" />
 
-  <Schedules currentDay="September 13" />
+  <Schedules currentDay="9月13日" />
 
   <GetTickets
-    title="获取您的GOSIM Hangzhou门票"
-    location="浙江 杭州"
+    title="获取您的GOSIM杭州门票"
+    location="中国杭州"
     date="2025年9月13-14日"
-    text="立即确保您在GOSIM Hangzhou 2025的席位。与创新者合作，与行业先驱交流，成为塑造开源技术未来的一部分。"
+    text="立即预订您在GOSIM杭州2025的席位。与创新者协作，与行业先锋交流，参与塑造开源技术的未来。"
     ctaButton={{
       text: "获取门票",
-      link: "/zh/tickets",
+      link: "/tickets",
       openInNewTab: false,
     }}
   />
