Updated sponsor page

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -13,7 +13,7 @@ const firstColumnLinks = [
     link: "/speakers/",
   },
   {
-    text: "Supporters",
+    text: "Sponsors",
     link: "/sponsors/",
   },
   {
