--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -16,7 +16,7 @@ const links = [
     link: "/speakers/",
   },
   {
-    text: "Supporters",
+    text: "Sponsors",
     link: "/sponsors/",
   },
   // {
