--- a/src/components/HeaderLanding.astro
+++ b/src/components/HeaderLanding.astro
@@ -28,10 +28,10 @@ const links = [
     text: "Schedule",
     link: "/schedule",
   },
-  // {
-  //   text: "Sponsors",
-  //   link: "/sponsors",
-  // },
+  {
+    text: "Sponsors",
+    link: "/sponsors",
+  },
   {
     text: "Spotlight",
     link: "/#spotlight",
