--- a/src/components/HeaderLandingZh.astro
+++ b/src/components/HeaderLandingZh.astro
@@ -28,10 +28,10 @@ const links = [
     text: "议程安排",
     link: "/zh/schedule",
   },
-  // {
-  //   text: "赞助商",
-  //   link: "/zh/sponsors",
-  // },
+  {
+    text: "赞助商",
+    link: "/zh/sponsors",
+  },
   {
     text: "Spotlight",
     link: "/zh/#spotlight",
