--- a/src/pages/zh/sponsors.astro
+++ b/src/pages/zh/sponsors.astro
@@ -3,7 +3,7 @@
 import Layout from "layouts/LayoutLandingZh.astro";
 import GetTickets from "components/GetTickets.astro";
 import HeroText from "components/HeroText.astro";
-import AllSponsors from "components/Sponsors.astro";
+import AllSponsors from "components/SponsorsZh.astro";
 ---
 
 <Layout
