--- a/src/components/SponsorsZh.astro
+++ b/src/components/SponsorsZh.astro
@@ -3,7 +3,7 @@ import { Picture } from "astro:assets";
 import type { ImageMetadata } from "astro";
 
 // Import the partners data
-import sponsorsData from "json/Sponsors.json";
+import sponsorsData from "json/SponsorsZh.json";
 
 // Import all images
 const images = import.meta.glob<{ default: ImageMetadata }>(
