--- a/src/pages/sponsors.astro
+++ b/src/pages/sponsors.astro
@@ -7,13 +7,13 @@ import AllSponsors from "components/Sponsors.astro";
 ---
 
 <Layout
-  title="Supporters – GOSIM Hangzhou 2025"
+  title="Sponsors – GOSIM Hangzhou 2025"
   description="GOSIM Hangzhou 2025 is a gathering of open-source AI projects, developers, researchers, and industry sponsors to share knowledge, learn from each other, and collaborate."
   navBackground="light"
-  pageTransitionName="Supporters"
+  pageTransitionName="Sponsors"
 >
   <HeroText
-    title="Supporters"
+    title="Sponsors"
     text="We're excited to bring you an incredible experience, made possible by the generous support of our Sponsors and Supporting Organizations. We've partnered with true innovators that are pushing the boundaries of our industry."
     lightgray
   />
