--- a/src/pages/zh/index.astro
+++ b/src/pages/zh/index.astro
@@ -18,7 +18,7 @@ import Cards from "components/Cards.astro";
 import CardsSponsors from "components/CardsSponsors.astro";
 
 // Images
-import Placeholder1 from "images/homepage/stats1.jpeg";
+import Placeholder1 from "images/homepage/stats1.png";
 import Placeholder2 from "images/homepage/stats2.jpg";
 import Placeholder3 from "images/homepage/stats3.png";
 import SpotlightBlue from "images/homepage/spotlight-hg.svg";
