updated more tracks

--- a/src/pages/zh/index.astro
+++ b/src/pages/zh/index.astro
@@ -266,7 +266,7 @@ import GosimParis from "images/homepage/gosim-paris-min.png";
 
   <TextAndSponsors
     title="赞助机会"
-    text="通过成为GOSIM Hangzhou 2025的支持组织，接触到数千名目标受众。"
+    text="通过成为GOSIM Hangzhou 2025的合作伙伴，接触到数千名目标受众。"
     text2="*仅展示往届GOSIM会议赞助商，仅供参考。"
     ctaButton={{
       text: "联系我们",
