--- a/src/pages/zh/sponsors.astro
+++ b/src/pages/zh/sponsors.astro
@@ -14,7 +14,7 @@ import AllSponsors from "components/SponsorsZh.astro";
 >
   <HeroText
     title="赞助商"
-    text="我们很高兴为您带来一次令人难以置信的体验，这要归功于我们的赞助商和支持组织的慷慨支持。我们与真正的创新者合作，他们正在推动我们行业的边界。"
+    text="我们很高兴为您带来一次令人难以置信的体验，这要归功于我们的赞助商和合作伙伴的慷慨支持。我们与真正的创新者合作，他们正在推动我们行业的边界。"
     lightgray
   />
 
