--- a/src/pages/schedule-day-tbd.astro
+++ b/src/pages/schedule-day-tbd.astro
@@ -7,14 +7,14 @@ import Schedules from "components/Schedules.astro";
 ---
 
 <Layout
-  title="Schedule Day 2 – GOSIM Hangzhou 2025"
+  title="TBD Date – GOSIM Hangzhou 2025"
   description="GOSIM Hangzhou 2025 is a gathering of open-source AI projects, developers, researchers, and industry sponsors to share knowledge, learn from each other, and collaborate."
   navBackground="light"
-  pageTransitionName="Day 2"
+  pageTransitionName="TBD Date"
 >
-  <HeroText title="Schedule: September 14" />
+  <HeroText title="Schedule: TBD Date" />
 
-  <Schedules currentDay="September 14" />
+  <Schedules currentDay="TBD date" />
 
   <GetTickets
     title="Grab your GOSIM Hangzhou ticket"
